# restful_api

./: .gitignore  README.md  create.html  list.html  pyproject.toml  sample.html
api/: .env.example  config.py  database.py  main.py  pyproject.toml
api/dependencies/: auth.py
api/models/: __init__.py  post.py
api/routers/: auth.py  posts.py
api/schemas/: __init__.py  auth.py  post.py
docs/: board-api.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  posts.ts
frontend/src/components/: CreatedPostPanel.tsx  PostCreateForm.tsx  StatusMessage.tsx
frontend/src/pages/: ApiDocsPage.tsx  CreatePostPage.tsx  NotFoundPage.tsx  PostCreatePage.tsx  PostDetailPage.tsx  PostListPage.tsx  PostsPage.tsx
frontend/src/types/: auth.ts  post.ts
