[project]
name = "fastapi-restful-server"
version = "0.1.0"
description = "A RESTful API server using FastAPI, SQLAlchemy, and PostgreSQL."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "psycopg[binary]==3.3.2",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.48",
    "uvicorn[standard]==0.42.0",
]

[tool.uv]
package = false
